SUBDIRS = ${subdirs}

#moldeoplayerdir=${prefix}/bin

desktopdir = ${prefix}/share/applications
bin_SCRIPTS = moldeoplayer
CLEANFILES = $(bin_SCRIPTS)
EXTRA_DIST = AUTHORS moldeoplayer.in configure.ac Makefile.am


dist_bin_SCRIPTS = moldeoplayer
dist_desktop_DATA = moldeoplayer.desktop

#dist_moldeoplayer_DATA =
#install-data-hook:
#	chmod +rx ${DESTDIR}${nwjsexe}
